--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ img{
 }
 
 @media screen and (min-width:1440px){
+  img{
+    max-height: 100%;
+  }
   .article{
     position: initial;
     display: flex;
